LP-2008-01-25-0: Enhancem.: Improvements to SMF support
                            Cleanup for java 1.5

PJ-2008-01-25-0: Bugfix:    Sort on table column throws exception 
                            if explicit SORT specified in 
                            SimpleQuery Sort on table column
                 Bugster:   6549694
                 Issue:     2344
                 Review:    LP

AP-2008-01-22-0: Bugfix:    deletion rule for PostgreSQL incorrect for deletion 
                            of sge_share_log
                 Bugster:   6653090
                 Issue:     2468
                 Review:    JO

PJ-2008-01-16-0: Bugfix:    Row Limit in Simple Query uses wrong syntax
                 Bugster:   6640762
                 Issue:     2444
                 Review:    JO

LP-2008-01-16-0: Bugfix:    PID file is not automatically removed

PJ-2008-01-16-0: Enhancem.: Change ClusterIndex to ClusterName, ready for unique
                            SGE_CLUSTER_NAME
                 Review:    JO

AP-2008-01-16-0: Bugfix:    o Wrong variable for calculating daily host values from 
                              hourly ones
                            o DBW derived rules and reporting queries that count 
                              jobs need to be updated - updating views view_accounting, 
                              view_job_times, view_jobs_completed
                            o Updating queries, fixing sql statements, adding 
                              descriptions
                 Bugster:   6457900, 6638354
                 Issue:     2463, 2440
                 Review:    JO

JO-2008-01-15-0: Enhancem.: Changed project.xml to use java 1.5

LP-2008-01-10-0: Enhancem.: Removed version string from SMF service name

AP-2008-01-09-0: Bugfix:    fix of PJ-2007-12-07-0 commit

JO-2008-01-09-0: Enhancem.:   o  Changed FileParser so it would parse the reporting
                                 file even if the 'acct' line does not contain ar_number