@@ -1,0 +1,102 @@
+Source Code Review Form 
+=======================
+(version 1.3)
+
+Date: 2008-01-31
+
+1 Identification
+
+PJ-2008-01-31-0: Bugfix:    ORDER BY clause ignored in Advanced Query
+                 Bugster:   6598005 
+                 Issue:     2354
+                 Review:    JO
+
+2 Conforms to specification
+
+2 [x] yes
+2 [ ] no - comment:
+
+
+3 Documentation
+
+3.1 user/admin guide OK, or doc CR filed?
+3.1 [x] yes    
+3.1 [ ] no - comment:
+
+3.2 man pages (user view) correct?
+3.2 [x] yes
+3.2 [ ] no - comment:
+
+3.3 -help output correct and complete?
+3.3 [x] yes
+3.3 [ ] no - comment:
+
+3.4 documented interfaces (at least GDI, EVI, libs, ADOC format) correct, updated?
+3.4 [ ] yes
+3.4 [x] no - comment:
+
+3.5 messages, output formats and defines OK?
+3.5 [x] yes
+3.5 [ ] no - comment:
+
+3.6 Bugster CR complete and correct?
+3.6 [x] yes
+3.6 [ ] no - comment:
+
+3.7 Issuezilla entry (if exists) complete and correct?
+3.7 [x] yes
+3.7 [ ] no - comment:
+
+
+4 Source review
+
+4.1 Style guide conformance
+4.1 [x] yes
+4.1 [ ] no - comment:
+
+4.2 Memory leaks
+4.2 [x] yes
+4.2 [ ] no - comment:
+
+4.3 Thread safe
+4.3 [x] yes
+4.3 [ ] no
+
+
+5 Tests
+
+5.1 Used memory leak debugger
+5.1 [ ] yes
+5.1 [x] no - comment: does not apply
+
+5.2 Manual tests
+5.2 [x] yes
+5.2 [ ] no - comment:
+
+5.3 Testsuite covers issue
+5.3 [ ] yes
+5.3 [x] no - comment: n/a 
+
+dbwriter junit tests - passed - tested on Oracle and Postgresql databases
+
+5.4 If 5.3 = no: New testsuite test or module test created?
+5.4 [ ] yes, path:  
+5.4 [x] no - justification: N/A
+
+5.5 If 5.4 = no: Testsuite issue created?
+5.5 [ ] yes, id: 
+5.5 [x] no - justification: 
+
+5.6 Testsuite run successfull
+5.6 [x] yes
+5.6 [ ] no - comment: 
+
+
+6 Comments
+
+
+7 Accepted
+7 [x] yes
+7 [ ] no - comment:
+
+
